# TodoDev

./: 2match.py  3listdicingintroduced.py  PratikPython.code-workspace  README.md  TodoCMD.py  dicing.py  functions.py  match.py  todos.txt
Bonus/: ZipperGUI.py
CodingExercises/: Classesexample.py  MeetingDict.py  exercises.py  exercises2.py
CodingExercises/NotNeededRN/: members.txt
LilModules/: globgettingfilteredfiles.py
Old Versions Of TodoCMD/: 1main.py
TODOGui/: TodoCMD.py  functions.py  gui.py  pyproject.toml  todos.txt
TodoCMDBeforeGUI/: functions.py
